Fixed heading overflow

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,8 @@
     display:flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px; 
+    margin:0 ;
+    padding:  1% 10%; 
 }
 
 .header img{
@@ -13,8 +14,8 @@ ul{
     list-style: none;
     display: flex;
     margin:0;
-     padding: 0;
-    gap:10px;
+    padding: 0;
+    gap:10%;
 }
 
 .links{
